# FigmaFlow-parser

./: .gitignore  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
web/: stage_1_get.py  stage_2_edit.py  stage_3_document.py
