[project]
name = "figmaflow-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selectolax>=0.4.10",
]

[dependency-groups]
dev = ["ruff"]

[tool.ruff.lint]
# E501 правило для длины строки
select = ["E", "F", "I", "E501"]

[tool.ruff]
line-length = 100 
